[workspace]
members = [
    "bluer",
    "bluer-tools",
]

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "77c7d8f31b89d13117a7294842d60f02950fdd23" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "77c7d8f31b89d13117a7294842d60f02950fdd23" }
#drogue-device = { git="https://github.com/drogue-iot/drogue-device.git", branch="main", features = ["ble", "std"] }
drogue-device = { git="https://github.com/dejanb/drogue-device.git", branch="models", features = ["ble", "std"] }
#drogue-device = { path = "../../drogue-iot/drogue-device/device", features = ["ble", "std"] }
ector = { git = "https://github.com/drogue-iot/ector.git", rev = "53a28cfed7b1030c1e841175ff8a5577251f30c8" }

# dbus = { path = "../dbus-rs/dbus/", features = ["futures"], optional = true }
# dbus-tokio = { path = "../dbus-rs/dbus-tokio/", optional = true }
# dbus-crossroads = { path = "../dbus-rs/dbus-crossroads/", optional = true }
